# minaw.net

./: .dockerignore  .gitignore  Dockerfile  Procfile  README.md  d.json  db.json  fly.toml  manage.py  n.json  p.json  pyproject.toml  requirements.txt
avatar/: forms.py  processing.py  urls.py  views.py
bikrave/: admin.py  apps.py  models.py  urls.py  views.py
bikrave/migrations/: 0001_initial.py  0002_auto_20190804_1646.py  0003_auto_20190808_1115.py
dynimg/: admin.py  forms.py  models.py  processing.py  urls.py  views.py
dynimg/migrations/: 0001_initial.py  0002_auto_20160522_1251.py  0003_stat.py  0004_auto_20160812_1928.py  0005_auto_20160812_1929.py  0006_auto_20160812_1933.py  0007_auto_20160812_1937.py  0008_auto_20160829_1419.py  0008_auto_20170622_0425.py  0009_auto_20170129_0311.py  0009_auto_20170622_0129.py
leminaw/: custom_storages.py  settings.py  settingsprod.py  urls.py  wsgi.py
namegen/: admin.py  forms.py  models.py  processing.py  urls.py  views.py
namegen/migrations/: 0001_initial.py  0002_auto_20170129_0311.py  0002_auto_20170622_0129.py  0002_auto_20170622_0425.py
perso/: admin.py  fields.py  forms.py  models.py  urls.py  views.py
perso/migrations/: 0001_initial.py  (+10 more)
playel/: admin.py  models.py  urls.py  views.py
portfolio/: admin.py  models.py  tests.py  urls.py  utils.py  views.py
profs/: admin.py  forms.py  models.py  processing.py  urls.py  views.py
quotes/: admin.py  models.py  urls.py  views.py
register/: admin.py  data.py  forms.py  models.py  urls.py  views.py
syntheses/: asgi.py  settings.py  urls.py  wsgi.py
(+141 files in other folders)
