[project]
name = "syntheses"
version = "1.0.0"
description = "Synthetize.me web apps."
authors = [
    {name = "Triphase", email = "triphase@synthetize.me"},
]
dependencies = [
    "django~=4.2",
    "gunicorn>=21.2.0",
    "dj-database-url~=2.1",
    "psycopg2-binary>=2.9.7",
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}

[tool.pdm.options]
add = ["--no-self"]
install = ["--no-self"]

[tool.pdm.dev-dependencies]
dev = [
    "black>=23.7.0",
    "isort>=5.12.0",
]

[tool.black]
exclude = '''
/(
    \.git
  | \.venv
  | migrations
)/
'''

[tool.isort]
profile = "black"
